02. -16- DynamicFragmentDemo - rename directory

--- a/02-16-DynamicFragmentDemo/app/src/main/res/values/strings.xml
+++ b/02-16-DynamicFragmentDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DynamicFragementDemo</string>
+    <string name="app_name">DynamicFragmentDemo</string>
 </resources>
