--- a/02-23-IncomeExpenseNavigationDemo/app/src/main/res/values/strings.xml
+++ b/02-23-IncomeExpenseNavigationDemo/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">Welcome</string>
+
+    <string-array name="tab_names">
+        <item>Income</item>
+        <item>Expense</item>
+    </string-array>
 </resources>
