--- a/practice/GoogleMapsDemo/app/src/main/res/values/strings.xml
+++ b/practice/GoogleMapsDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">GoogleMapsDemo</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_maps">GoogleMapsDemo</string>
 </resources>
