03. -34- LocationAndMapDemo - add MapsActivity, api key

--- a/03-28-LocationAndMapDemo/app/src/main/res/values/strings.xml
+++ b/03-28-LocationAndMapDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LocationAndMapDemo</string>
+    <string name="title_activity_maps">LocationAndMapDemo</string>
 </resources>
