--- a/practice/GeoLocationDemo/app/src/main/res/values/strings.xml
+++ b/practice/GeoLocationDemo/app/src/main/res/values/strings.xml
@@ -1,12 +1,6 @@
 <resources>
     <string name="app_name">GeoLocationDemo</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-
-    <string name="button_start_tracking">Start Tacking</string>
-    <string name="button_stop_tracking">Stop Tacking</string>
-    <string name="latitude_label">Latitude: </string>
-    <string name="longitude_label">Longitude: </string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
