Practice - GeoLocationDemo - work

--- a/practice/GeoLocationDemo/app/src/main/res/values/strings.xml
+++ b/practice/GeoLocationDemo/app/src/main/res/values/strings.xml
@@ -3,4 +3,16 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string name="status">Status: %1$s</string>
+
+    <string name="latitude">Latitude: %1$f</string>
+    <string name="longitude">Longitude: %1$f</string>
+
+    <string name="provider">Provider: %1$s</string>
+    <string name="accuracy">Accuracy: %1$s</string>
+    <string name="altitude">Altitude: %1$s</string>
+    <string name="speed">Speed: %1$s</string>
+    <string name="time">Time: %1$s</string>
+
 </resources>
