--- a/practice/FragmentManagerDemo/app/src/main/res/values/strings.xml
+++ b/practice/FragmentManagerDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FragmentManagerDemo</string>
+    <string name="logout">Logout</string>
+    <string name="login">Login</string>
+    <string name="name">Name</string>
+    <string name="password">Password</string>
 </resources>
