Practice - FragmentManagerDemo 2 - add comments

--- a/practice/FragmentManagerDemo2/app/src/main/res/values/strings.xml
+++ b/practice/FragmentManagerDemo2/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="logout">Logout</string>
+    <string name="name_field_can_not_be_empty">Name field can not be empty</string>
+    <string name="the_password_can_not_be_empty">The password can not be empty</string>
 </resources>
