--- a/practice/FragmentManagerDemo2/app/src/main/res/values/strings.xml
+++ b/practice/FragmentManagerDemo2/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="the_password_can_not_be_empty">The password can not be empty</string>
     <string name="email">Email</string>
     <string name="action_settings">Setting</string>
+    <string name="exit">Exit</string>
 </resources>
