--- a/06-64-MusicPlayer/app/src/main/res/values/strings.xml
+++ b/06-64-MusicPlayer/app/src/main/res/values/strings.xml
@@ -1,3 +1,40 @@
 <resources>
     <string name="app_name">Music Player</string>
+    <string name="sort">Sort</string>
+    <string name="cover">Cover</string>
+    <string name="songtitle">SongTitle</string>
+    <string name="albumname">AlbumName</string>
+    <string name="back">Back</string>
+    <string name="now_playing">Now playing</string>
+    <string name="artistname">ArtistName</string>
+    <string name="_00_00">00:00</string>
+    <string name="shuffle">Shuffle</string>
+    <string name="repeat">Repeat</string>
+    <string name="timer">Timer</string>
+    <string name="equalizer">Equalizer</string>
+    <string name="share">Share</string>
+    <string name="previous">Previous</string>
+    <string name="playpause">Play/Pause</string>
+    <string name="next">Next</string>
+    <string name="hold_you">Hold you</string>
+    <string name="duration">04:32</string>
+    <string name="playlists">Playlists</string>
+    <string name="playlist_name">Playlist name</string>
+    <string name="playlistname">Playlistname</string>
+    <string name="createdby">Created by</string>
+    <string name="created_on">Created on</string>
+    <string name="total_songs">Total songs</string>
+    <string name="add">Add</string>
+    <string name="liked_songs">Liked songs</string>
+    <string name="remove_all">Remove  all</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="_15_minutes">15 minutes</string>
+    <string name="_30_minutes">30 minutes</string>
+    <string name="_60_minutes">60 minutes</string>
+    <string name="playlist">Playlist</string>
+    <string name="your_name">Your name</string>
+    <string name="feedback">Feedback</string>
+    <string name="about">About</string>
+    <string name="exit">Exit</string>
 </resources>
