--- a/07-79-TrackLocationService/app/src/main/res/values/strings.xml
+++ b/07-79-TrackLocationService/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
     <string name="location_updated">Location Updated: %1$s</string>
 
-    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
+    <string name="preference_file_key">com.cubix.tracklocationservice.PREFERENCE_FILE_KEY</string>
     <string name="no_location_text">No current location</string>
     <string name="email">Email</string>
 </resources>
