--- a/07-79-TrackLocationService/app/src/main/res/values/strings.xml
+++ b/07-79-TrackLocationService/app/src/main/res/values/strings.xml
@@ -11,12 +11,13 @@
     <string name="settings">Settings</string>
     <string name="ok">OK</string>
 
-    <string name="start_location_updates_button_text">Start receiving location updates</string>
-    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
+    <string name="start_location_updates_button_text">Start location updates</string>
+    <string name="stop_location_updates_button_text">Stop location updates</string>
 
     <string name="location_updated">Location Updated: %1$s</string>
 
     <string name="preference_file_key">com.cubix.tracklocationservice.PREFERENCE_FILE_KEY</string>
     <string name="no_location_text">No current location</string>
     <string name="email">Email</string>
+    <string name="send_location_button_text">Send location</string>
 </resources>
