--- a/10-b2-TaxiDemo/app/src/main/res/values/strings.xml
+++ b/10-b2-TaxiDemo/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="username">Username</string>
     <string name="create_an_account">Create an account</string>
     <string name="repeat_password">Repeat password</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
