--- a/practice/ManageRuntimePermissions/app/src/main/res/values/strings.xml
+++ b/practice/ManageRuntimePermissions/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">Manage Runtime Permissions</string>
+    <string name="permission_title">Permission title</string>
+    <string name="permission_description">Permission description %1$s</string>
+    <string name="no_thanks">No, thanks</string>
+    <string name="button_ok">OK</string>
+    <string name="permission_description_permanently">Permission description permanently %1$s</string>
+    <string name="go_to_settings">Go to settings</string>
+    <string name="post_notifications">POST_NOTIFICATIONS</string>
+    <string name="wake_lock">WAKE_LOCK</string>
+    <string name="internet">INTERNET</string>
+    <string name="access_network_state">ACCESS_NETWORK_STATE</string>
+    <string name="read_calendar">READ_CALENDAR</string>
+    <string name="write_calendar">WRITE_CALENDAR</string>
+    <string name="read_external_storage">READ_EXTERNAL_STORAGE</string>
+    <string name="read_media_images">READ_MEDIA_IMAGES</string>
+    <string name="read_media_video">READ_MEDIA_VIDEO</string>
+    <string name="read_media_audio">READ_MEDIA_AUDIO</string>
+    <string name="schedule_exact_alarm">SCHEDULE_EXACT_ALARM</string>
+    <string name="write_external_storage">WRITE_EXTERNAL_STORAGE</string>
+    <string name="camera">CAMERA</string>
+    <string name="read_phone_state">READ_PHONE_STATE</string>
+    <string name="read_phone_numbers">READ_PHONE_NUMBERS</string>
+    <string name="get_accounts">GET_ACCOUNTS</string>
+    <string name="foreground_service">FOREGROUND_SERVICE</string>
+    <string name="access_fine_location">ACCESS_FINE_LOCATION</string>
+    <string name="receive_boot_completed">RECEIVE_BOOT_COMPLETED</string>
+    <string name="read_contacts">READ_CONTACTS</string>
+    <string name="record_audio">RECORD_AUDIO</string>
+    <string name="access_wifi_state">ACCESS_WIFI_STATE</string>
+    <string name="modify_audio_settings">MODIFY_AUDIO_SETTINGS</string>
+    <string name="bluetooth">BLUETOOTH</string>
+    <string name="bluetooth_connect">BLUETOOTH_CONNECT</string>
+    <string name="activity_recognition">ACTIVITY_RECOGNITION</string>
+    <string name="use_full_screen_intent">USE_FULL_SCREEN_INTENT</string>
+    <string name="vibrate">VIBRATE</string>
+    <string name="need_this_permission_msg">Need this permission</string>
 </resources>
